Added notebook and code to train in the cloud.

--- a/fashion-mnist-aml-basic/cloud/data.yml
+++ b/fashion-mnist-aml-basic/cloud/data.yml
@@ -1,4 +1,4 @@
 $schema: https://azuremlschemas.azureedge.net/latest/dataset.schema.json
-name: dataset-fashion-mnist
+name: data-fashion-mnist
 description: Fashion MNIST Dataset.
-local_path: ../data
+path: ../data/
