--- a/fashion-mnist-aml-basic/cloud/conda-train.yml
+++ b/fashion-mnist-aml-basic/cloud/conda-train.yml
@@ -1,4 +1,3 @@
-name: aml-job
 channels:
   - pytorch
   - conda-forge
@@ -13,3 +12,8 @@ dependencies:
   - yapf==0.31.0
   - pylint==2.12.1
   - ipykernel==6.13.0
+  - pip==22.0.4
+  - pip:
+      - azure-ml==0.0.1
+      - azureml-mlflow==1.41.0
+      - azureml.core
