--- a/fashion-mnist-aml-basic/cloud/job-output.yml
+++ b/fashion-mnist-aml-basic/cloud/job-output.yml
@@ -8,11 +8,11 @@ inputs:
   fashion_mnist:
     path: azureml:data-fashion-mnist:2
 outputs:
-  trained_model:
+  trained_model_output:
     type: mlflow_model
 
 code: ../src
 environment:
   image: mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04:latest
   conda_file: conda-train.yml
-command: python train.py --data_dir ${{inputs.fashion_mnist}} --model_dir ${{outputs.trained_model}}
+command: python train_output.py --data_dir ${{inputs.fashion_mnist}} --model_dir ${{outputs.trained_model_output}}
