--- a/aml-train-deploy/cloud/job.yml
+++ b/aml-train-deploy/cloud/job.yml
@@ -12,4 +12,4 @@ code: ../src
 environment:
   image: mcr.microsoft.com/azureml/openmpi4.1.0-ubuntu20.04:latest
   conda_file: conda-train.yml
-command: python train_artifact.py --data_dir ${{inputs.fashion_mnist}}
+command: python train.py --data_dir ${{inputs.fashion_mnist}}
