--- a/aml-command/cloud/endpoint.yml
+++ b/aml-command/cloud/endpoint.yml
@@ -1,3 +1,3 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineEndpoint.schema.json
-name: endpoint-aml-train-deploy
+name: endpoint-command
 auth_mode: key
