--- a/aml-command-artifact/cloud/deployment.yml
+++ b/aml-command-artifact/cloud/deployment.yml
@@ -1,6 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineDeployment.schema.json
 name: blue
-endpoint_name: endpoint-command
-model: azureml:model-command@latest
+endpoint_name: endpoint-command-artifact
+model: azureml:model-command-artifact@latest
 instance_type: Standard_DS3_v2
 instance_count: 1
