--- a/aml-command-artifact/cloud/endpoint.yml
+++ b/aml-command-artifact/cloud/endpoint.yml
@@ -1,3 +1,3 @@
 $schema: https://azuremlschemas.azureedge.net/latest/managedOnlineEndpoint.schema.json
-name: endpoint-command
+name: endpoint-command-artifact
 auth_mode: key
