--- a/aml-command-artifact/cloud/cluster-gpu.yml
+++ b/aml-command-artifact/cloud/cluster-gpu.yml
@@ -1,6 +1,6 @@
 $schema: https://azuremlschemas.azureedge.net/latest/amlCompute.schema.json
-name: cluster-cpu
+name: cluster-gpu
 type: amlcompute
-size: Standard_DS4_v2
+size: Standard_NC6s_v3
 min_instances: 0
 max_instances: 4
