--- a/aml-command-artifact/cloud/job.yml
+++ b/aml-command-artifact/cloud/job.yml
@@ -11,5 +11,5 @@ inputs:
 code: ../src
 environment:
   image: mcr.microsoft.com/azureml/openmpi3.1.2-cuda10.2-cudnn8-ubuntu18.04:latest
-  conda_file: conda-train.yml
+  conda_file: conda.yml
 command: python train.py --data_dir ${{inputs.fashion_mnist}}
